<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_Log" Id="{e8a01d42-1619-4507-ab5f-483454a2bd02}">
    <Declaration><![CDATA[TYPE ST_Log :
STRUCT
	sTime: DT;
	sStatus: STRING;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>